correct z-indexing

--- a/src/components/Main/AdditionalPage/AdditionalPage.styl
+++ b/src/components/Main/AdditionalPage/AdditionalPage.styl
@@ -9,6 +9,7 @@
   height 100%
   width 100%
   overflow-y auto
+  z-index 2
   .block
     flex-basis 20%
     display flex
