--- a/src/components/Main/LearnWear/LearnWear.styl
+++ b/src/components/Main/LearnWear/LearnWear.styl
@@ -17,6 +17,7 @@
   padding 3vh 4vw 3vh 3vw
   background-color gray-light
   animation fadeInFromNone .3s
+  z-index 2
 
   &-container
     position relative
