--- a/src/components/Main/MeasureYourBody/MYB.styl
+++ b/src/components/Main/MeasureYourBody/MYB.styl
@@ -5,6 +5,7 @@
   background white
   padding 3vh 3vw 57px 4vw
   overflow hidden
+  z-index 2
 
   ^[0]-container
     display flex
